exports[`HSL-API should be able to get route 1`] = `
Array [
  Object {
    "duration": 3065,
    "legs": Array [
      Object {
        "distance": 743.0159999999998,
        "duration": 645,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 17312.512924842842,
        "duration": 1440,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "P",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 1196.711,
        "duration": 978,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 3065,
    "legs": Array [
      Object {
        "distance": 743.0159999999998,
        "duration": 645,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 17312.512924842842,
        "duration": 1440,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "P",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 1196.711,
        "duration": 978,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 3790,
    "legs": Array [
      Object {
        "distance": 897.4159999999999,
        "duration": 764,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 30410.431214842498,
        "duration": 2040,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "I",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 1200.6970000000001,
        "duration": 984,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
]
`;

exports[`HSL-API should be able to get route with arriveBy 1`] = `
Array [
  Object {
    "duration": 3065,
    "legs": Array [
      Object {
        "distance": 743.0159999999998,
        "duration": 645,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Helsinki",
        },
      },
      Object {
        "distance": 17312.512924842842,
        "duration": 1440,
        "from": Object {
          "name": "Helsinki",
        },
        "mode": "RAIL",
        "route": Object {
          "shortName": "P",
        },
        "to": Object {
          "name": "Kivistö",
        },
      },
      Object {
        "distance": 1195.759,
        "duration": 978,
        "from": Object {
          "name": "Kivistö",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 2992,
    "legs": Array [
      Object {
        "distance": 468.127,
        "duration": 383,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Hki linja-autoasema",
        },
      },
      Object {
        "distance": 17452.411906043966,
        "duration": 1320,
        "from": Object {
          "name": "Hki linja-autoasema",
        },
        "mode": "BUS",
        "route": Object {
          "shortName": "485",
        },
        "to": Object {
          "name": "Keimola",
        },
      },
      Object {
        "distance": 1560.0429999999997,
        "duration": 1287,
        "from": Object {
          "name": "Keimola",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
  Object {
    "duration": 3292,
    "legs": Array [
      Object {
        "distance": 468.127,
        "duration": 383,
        "from": Object {
          "name": "Origin",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Hki linja-autoasema",
        },
      },
      Object {
        "distance": 17452.411906043966,
        "duration": 1620,
        "from": Object {
          "name": "Hki linja-autoasema",
        },
        "mode": "BUS",
        "route": Object {
          "shortName": "456",
        },
        "to": Object {
          "name": "Keimola",
        },
      },
      Object {
        "distance": 1560.0429999999997,
        "duration": 1287,
        "from": Object {
          "name": "Keimola",
        },
        "mode": "WALK",
        "route": null,
        "to": Object {
          "name": "Destination",
        },
      },
    ],
  },
]
`;
